--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "style-loader": "1.3.0",
     "terser-webpack-plugin": "4.2.3",
     "three": "^0.127.0",
+    "three-obj-mtl-loader": "^1.0.3",
     "three-orbitcontrols": "^2.110.3",
     "ts-pnp": "1.2.0",
     "url-loader": "4.1.1",
